# test_opengl_conan

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  glad.c  main.cpp
.github/workflows/: Linux.yml  Windows.yml  build.yml  linux.yml  macOS.yml  macos.yml  windows.yml
include/glad/: glad.h
